Added methods which don't involve getting game status
