# server/schemas/openapi.yaml
@@ -69,7 +69,7 @@ paths:
       parameters:
       - name: gameId
         in: path
-        description: ID of Game to get state of
+        description: ID of Game
         required: true
         schema:
           type: integer
@@ -92,6 +92,35 @@ paths:
                 $ref: '#/components/schemas/Game'
         400:
           description: Failed to take action
+          content:
+            application/json:
+              schema:
+                description: what went wrong
+                type: string
+    
+    post:
+      tags:
+      - Out of Game
+      summary: Join a game
+      description: Join a game
+      operationId: joinGame
+      parameters:
+      - name: gameId
+        in: path
+        description: ID of Game to get join
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: Successfuly joined
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Game'
+        400:
+          description: Failed to join game
           content:
             application/json:
               schema:
